auth.js modificado

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
             <form class="d-grid">
                 <input type="email" name="correo" id="correo" class="form-control mb-2" placeholder="Correo">
-                <input type="password" name="password" id="password" class="form-control mb-2" placeholder="Contraseña">
+                <input type="text" name="password" id="password" class="form-control mb-2" placeholder="Contraseña">
                 
                 <button class="btn btn-primary">Ingresar</button>
             </form>
