Google-Identity añadido

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,23 @@
         <div class="col-sm-6">
             <h1>Google Signin</h1>
             <hr>
-            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            <div id="g_id_onload"
+                data-client_id="329383596127-r1m33da585qmhh3kaqcg82ie2ooq9rku.apps.googleusercontent.com"
+                data-auto_prompt="false"
+                data-callback="handleCredentialResponse">
+            </div>
+            <div class="g_id_signin"
+                data-type="standard"
+                data-size="large"
+                data-theme="outline"
+                data-text="sign_in_with"
+                data-shape="rectangular"
+                data-logo_alignment="left">
+            </div>
+
             <br>
-            <a href="#" onclick="signOut();">Sign out</a>
+
+            <button id="google_signout">Cerrar sesión</button>
         </div>
 
         <div class="col-sm-6">
@@ -37,7 +51,7 @@
 
 
 
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="./js/auth.js"></script>
 
 </body>
