--- a/public/index.html
+++ b/public/index.html
@@ -15,23 +15,9 @@
         <div class="col-sm-6">
             <h1>Google Signin</h1>
             <hr>
-            <div id="g_id_onload"
-                data-client_id="329383596127-r1m33da585qmhh3kaqcg82ie2ooq9rku.apps.googleusercontent.com"
-                data-auto_prompt="false"
-                data-callback="handleCredentialResponse">
-            </div>
-            <div class="g_id_signin"
-                data-type="standard"
-                data-size="large"
-                data-theme="outline"
-                data-text="sign_in_with"
-                data-shape="rectangular"
-                data-logo_alignment="left">
-            </div>
-
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
             <br>
-
-            <button id="google_signout">Cerrar sesión</button>
+            <a href="#" onclick="signOut();">Sign out</a>
         </div>
 
         <div class="col-sm-6">
@@ -51,7 +37,7 @@
 
 
 
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="./js/auth.js"></script>
 
 </body>
