--- a/public/chat.html
+++ b/public/chat.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>-----</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 </head>
+
 <body class="container">
 
     <div class="row mt-5">
         <div class="col-sm-6">
             <h3>Enviar mensaje</h3>
             <hr>
-        
-            <input type="text" id="txtUid" class="form-control mb-2" placeholder="uid" autocomplete="off">
+
             <input type="text" id="txtUMensaje" class="form-control mb-2" placeholder="Mensaje" autocomplete="off">
             <button id="enviarMensaje" class="btn btn-primary mb-5 d-grid">Enviar mensaje</button>
 
@@ -38,6 +40,9 @@
             <div class="col-sm-12">
                 <h3>Chats privados</h3>
                 <hr>
+                <select id="ulUsuariosPrivados" ondblclick="mensajeDesdeElOption(value);">
+
+                </select>
                 <ul id="ulChatsPivados">
 
                 </ul>
@@ -52,4 +57,5 @@
     <script src="./js/chat.js"></script>
 
 </body>
+
 </html>
