--- a/public/chat.html
+++ b/public/chat.html
@@ -10,9 +10,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
+    <style>
+        .msg {
+            padding: 7px;
+            text-align: center;
+            border-radius: 10px;
+            width: 250px;
+            margin: auto;
+        }
+
+        #ulMensajes>.msgdynamic,
+        #ulChatsPivados>.msgdynamic {
+            list-style: none;
+            border-bottom: 1px solid #d4d1d1;
+        }
+
+        h3 {
+            text-align: center;
+        }
+    </style>
+
 </head>
 
-<body class="container">
+<body class="container-fluid">
 
     <div class="intro mt-5">
 
@@ -29,6 +49,17 @@
 
     <div class="row mt-5">
         <div class="col-sm-6">
+
+            <h3>Enviar mensaje</h3>
+            <hr>
+
+            <input type="text" id="txtUMensaje" class="form-control mb-2" placeholder="Mensaje" autocomplete="off">
+            <button id="enviarMensaje" class="btn btn-primary mb-5 d-grid">Enviar mensaje</button>
+
+        </div>
+
+        <div class="col-sm-6">
+
             <h3>Usuarios: </h3>
             <hr>
             <ul id="ulUsuarios2">
@@ -42,15 +73,9 @@
 
             </ul>
 
-            <br>
-
-            <h3>Enviar mensaje</h3>
-            <hr>
-
-            <input type="text" id="txtUMensaje" class="form-control mb-2" placeholder="Mensaje" autocomplete="off">
-            <button id="enviarMensaje" class="btn btn-primary mb-5 d-grid">Enviar mensaje</button>
-
         </div>
+    </div>
+    <div class="row mt-5" style="text-align: center;">
         <div class="col-sm-6">
             <h3>Chat reciente:</h3>
             <hr>
@@ -58,20 +83,18 @@
 
             </ul>
         </div>
-        <div class="row mt-5">
-            <div class="col-sm-12">
-                <h3>Chats privados</h3>
-                <hr>
-                <ul id="ulChatsPivados">
+        <div class="col-sm-6">
+            <h3>Chats privados</h3>
+            <hr>
+            <ul id="ulChatsPivados">
 
-                </ul>
-            </div>
+            </ul>
         </div>
     </div>
 
-    <button id="btnSalir" class="btn btn-outline-danger">Logout</button>
+    <button id="btnSalir" class="btn btn-outline-danger">Salir</button>
 
-    <hr>
+    <br />
 
     <script src="./socket.io/socket.io.js"></script>
     <script src="./js/chat.js"></script>
